[package]
name = "grumpkin"
version = "0.1.0"
authors = [ "Jules de Smit <julesdesmit@gmail.com>" ]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/julesdesmit/grumpkin"
readme = "README.md"
description = "Implementation of the Grumpkin curve in Rust, building off of the `halo2curves` library created by https://github.com/privacy-scaling-explorations"

[dependencies]
subtle = "2.4"
ff = "0.13.0"
group = "0.13.0"
pasta_curves = "0.5.0"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }

halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand_xorshift = "0.3"
ark-std = { version = "0.3", features = ["print-trace"] }

[features]
default = []
asm = ["halo2curves/asm"]
